# sambanova-copilot

./: .env  .gitignore  LICENSE.md  README-DOCS.md  README.md  build.ps1  copilot.py  copilot.pyw  copilot.spec  copilot_run.ps1  pyproject.toml  requirements.txt  run_app_linux.sh  run_app_windows.ps1  utils.py  vdb.py
.workspace/: AGI Development Meeting.md  Customer Issue for installing AI Chip.md  My Bad Resume.md
backend/: vdb.py  vdb.spec  vectordb_chroma.py
backend/.workspace/vdb/: meta.json
tests/: dragtest.py  samba-audio-probe.py
