[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "sambanova-copilot"
version = "1.0.0"
description = "Sambanova Copilot"
authors = ["Swamix Global AI Solutions"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PySide6 = "^6"
sounddevice = "^0.4.5"
numpy = "^1.23.4"
requests = "^2.28.1"
json5 = "^0.9.6"
soundfile = "^0.12.1"

pyautogui = "^0.9.53"
swamix = "^0"
anthropic = "^0.39.0"
openai = "^1.55.0"
python-dotenv = "^1.0.1"
voyageai = "^0.3.1"
chromadb = "^0.5.20"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[tool.poetry.scripts]
start = "swamix_copilot.copilot:main"
